crates/reinhardt-pages/tests/ui/form/fail/missing_name.stderr
error: form! macro requires 'name' property
 --> tests/ui/form/fail/missing_name.rs:8:3
  |
8 |         action: "/api/submit",
  |         ^^^^^^
